css not responsive, local storage need ton fix

--- a/src/index.css
+++ b/src/index.css
@@ -12,14 +12,20 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
+
+  width: 100vh;
+  height: 100vh;
+  margin: 0;
+  box-sizing: border-box;
 }
 
 
 body {
   margin: 0;
+  box-sizing: border-box;
   display: flex;
   place-items: center;
-  min-width: 320px;
+  min-width: 100vh;
   min-height: 100vh;
 }
 
