--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -8,6 +8,9 @@
   width: 100vh;
   height: 100vh;
   background: linear-gradient(45deg, #500ca0, #A00C5C, #0C5CA0);
- 
+}
+
+.coord {
+  margin-right: 3em;
 }
 
